--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,10 @@
     flex: 1 1 auto;
   }
   
+.main-container{
+  padding: 25px 100px 0 100px;
+}
+
   table {
     width: 100%;
   }
@@ -10,3 +14,4 @@
     font-size: 14px;
     width: 100%;
   }
+  
